Fixed extra spaces on mobile, now the sections are aligned

--- a/src/components/sass/About.scss
+++ b/src/components/sass/About.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 70px 0 0 35px;
+    padding: 70px 0 35px 0;
     background-color: #13111c;
     color: white;
 
