--- a/src/components/sass/Footer.scss
+++ b/src/components/sass/Footer.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    padding: 70px 0 0 35px;
+    padding: 70px 0 35px 0;
     position: relative;
 
     .miniCom{
