--- a/src/components/sass/Project.scss
+++ b/src/components/sass/Project.scss
@@ -1,5 +1,4 @@
 .project{
-    width: 90vw;
     min-height: 300px;
     height: 40vh;
     max-height: 400px;
