--- a/src/components/sass/ProjectList.scss
+++ b/src/components/sass/ProjectList.scss
@@ -1,5 +1,5 @@
 #projects{
-    padding: 70px 0 0 35px;
+    padding: 70px 0 35px 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
